# boringssl-libwebsockets

./: jni_gen.sh
app/: build.gradle
app/src/androidTest/java/mark/com/boringssl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  a.h  native-lib.cpp  native.cpp  native.h  register.cpp  register.h  websocket.cpp  websocket.h
app/src/main/cpp/include/: lws_config.h
app/src/main/cpp/libwebsockets/include/: libwebsockets.h
app/src/main/java/mark/com/boringssl/: JNI.java  MainActivity.java  Task.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/mark/com/boringssl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
websockets/src/main/java/com/example/: SoLoader.java  WebSocket.java
